[tool.poetry]
name = "app-info-bot"
version = "0.1.0"
description = ""
authors = ["Fede Calendino <fede@calendino.com>"]

[tool.poetry.dependencies]
python = "^3.9"
azure-functions = "^1.11.2"
beautifulsoup4 = "^4.11.1"
praw = "^7.6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
